--- a/Project_1_Guess_My_Number/style.css
+++ b/Project_1_Guess_My_Number/style.css
@@ -1,18 +1,34 @@
 * {
   color: rgb(181, 185, 186);
-  font-family: "Raleway", sans-serif;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: lighter;
-  background-color: rgb(80, 53, 53);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.top h3 {
-  text-align: left;
-  font-size: 20px;
+body {
+  background-color: rgb(80, 53, 53);
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-image: radial-gradient(circle at center, transparent, rgba(0, 0, 0, 0.6) 90%);
+  pointer-events: none;
+}
+
+.top #restart {
+  text-align: center;
+  font-size: 15px;
   margin-left: 20px;
   margin-top: 20px;
+  padding: 10px;
+  background-color: rgb(80, 53, 53);
 }
 
 .top h4 {
@@ -30,6 +46,13 @@
   margin-bottom: 80px;
 }
 
+.number {
+  display: flex;
+  justify-content: center;  /* Horizontally centers the content */
+  align-items: center;      /* Vertically centers the content */  
+  height: 13vh;
+}
+
 #number {
   font-size: 80px;
   font-weight: bold;
@@ -38,48 +61,62 @@
   text-align: center;
   background-color: rgb(181, 185, 186);
   color: rgb(80, 53, 53);
-  margin-left: 496.5px;
 }
 
-.input #type {
+.input {
+  display: flex;
+  justify-content: center; /* Horizontally centers the content */
+  align-items: center; /* Vertically centers the content */
+  height: 10vh; /* Assuming you want it to take the full viewport height */
+}
+
+#type {
   margin-top: 100px;
-  margin-left: 505px;
   padding: 10px;
   width: 100px;
   font-size: 30px;
-  font-weight:bold;
-  background-color:rgb(32, 29, 29);
+  font-weight: bold;
+  background-color: rgb(32, 29, 29);
   border: 5px solid white;
   text-align: center;
 }
 
-#button-check {
-    text-align: center;
-    font-size: 20px;
-    font-weight: bolder;
-    padding: 10px;
-    margin-left: 508px;
-    margin-top: 10px;
+.button-container {
+  display: flex;
+  justify-content: center; /* Horizontally centers the content */
+  align-items: center; /* Vertically centers the content */
+  height: 10vh; /* Assuming you want it to take the full viewport height */
 }
 
-#start-guessing {
-    font-size: 20px;
-    margin-top: -100px;
-    margin-left: 350px;
-    font-weight: bolder;
+#button-check {
+  text-align: center;
+  color: rgb(80, 53, 53);
+  font-size: 20px;
+  font-weight: bolder;
+  padding: 10px;
+  margin-top: 80px;
+}
+
+.start-guessing {
+  display: flex;
+  justify-content: center; /* Horizontally centers the content */
+  align-items: center; /* Vertically centers the content */
+  height: 10vh;
+  font-size: 20px;
+  font-weight: bolder;
+  margin-top: -100px;
+  margin-left: -260px;
 }
 
 .totals {
-    font-size: 25px;
-    font-weight: 600;
-    text-align: center;
-    margin-right: 20px;
-    line-height: 50px;
-    margin-top: 100px;
-
+  font-size: 25px;
+  font-weight: 600;
+  text-align: center;
+  margin-right: 20px;
+  line-height: 50px;
+  margin-top: 70px;
 }
 
 .totals #score {
-    font-size: 40px;
+  font-size: 40px;
 }
-
