--- a/Project_1_Guess_My_Number/style.css
+++ b/Project_1_Guess_My_Number/style.css
@@ -42,7 +42,7 @@ body::before {
   font-size: 50px;
   text-align: center;
   font-weight: bold;
-  margin-top: 80px;
+  margin-top: 50px;
   margin-bottom: 80px;
 }
 
@@ -63,15 +63,30 @@ body::before {
   color: rgb(80, 53, 53);
 }
 
-.input {
+.input-wrapper1 {
   display: flex;
-  justify-content: center; /* Horizontally centers the content */
   align-items: center; /* Vertically centers the content */
-  height: 10vh; /* Assuming you want it to take the full viewport height */
+  justify-content: center; /* Horizontally centers the content */
+  margin-top: 6vh; /* Adjust as needed */
+/*  margin-right: 180px;*/
+}
+
+.start-guessing {
+  /* Remove negative margins */
+  font-size: 20px;
+  font-weight: bolder;
+  margin-right: 20px; /* Add some space between the text and the input */
+}
+
+.input-wrapper2 {
+  display: flex;
+  align-items: center; /* Vertically centers the content */
+  justify-content: center; /* Horizontally centers the content */
+  margin-top: 2vh; /* Adjust as needed */
+  /*margin-right: 180px;*/
 }
 
 #type {
-  margin-top: 100px;
   padding: 10px;
   width: 100px;
   font-size: 30px;
@@ -81,11 +96,12 @@ body::before {
   text-align: center;
 }
 
+
 .button-container {
   display: flex;
   justify-content: center; /* Horizontally centers the content */
   align-items: center; /* Vertically centers the content */
-  height: 10vh; /* Assuming you want it to take the full viewport height */
+  height: 5vh; /* Assuming you want it to take the full viewport height */
 }
 
 #button-check {
@@ -94,18 +110,7 @@ body::before {
   font-size: 20px;
   font-weight: bolder;
   padding: 10px;
-  margin-top: 80px;
-}
-
-.start-guessing {
-  display: flex;
-  justify-content: center; /* Horizontally centers the content */
-  align-items: center; /* Vertically centers the content */
-  height: 10vh;
-  font-size: 20px;
-  font-weight: bolder;
-  margin-top: -100px;
-  margin-left: -260px;
+  margin-top: 50px;
 }
 
 .totals {
@@ -114,7 +119,7 @@ body::before {
   text-align: center;
   margin-right: 20px;
   line-height: 50px;
-  margin-top: 70px;
+  margin-top: 50px;
 }
 
 .totals #score {
